KB-11530| BE | TECH DEBT | Junit Test cases to improve the unit test cases coverage for cb-ext-course-service (#130)