@@ -1,31 +1,22 @@
 package com.igot.cb.service;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.junit.jupiter.api.Assertions.fail;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyList;
-import static org.mockito.ArgumentMatchers.anyString;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.when;
 
+import java.lang.reflect.Method;
 import java.time.Instant;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.Date;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpStatus;
 import org.springframework.test.util.ReflectionTestUtils;
 
@@ -42,6 +33,7 @@ import com.igot.cb.util.CbExtServerProperties;
 import com.igot.cb.util.Constants;
 import com.igot.cb.util.RequestValidator;
 
+
 class CbPlanServiceImplTest {
 
     @Mock private AccessTokenValidator accessTokenValidator;
@@ -51,13 +43,13 @@ class CbPlanServiceImplTest {
     @Mock private EsUtilService esUtilService;
     @Mock private CbExtServerProperties serverProperties;
     @Mock private RequestValidator requestValidator;
-    
+
     private CbPlanServiceImpl cbPlanService;
 
     @BeforeEach
     void setUp() {
         MockitoAnnotations.openMocks(this);
-        cbPlanService = new CbPlanServiceImpl(accessTokenValidator, cassandraOperation, serverProperties, userUtilityService, 
+        cbPlanService = new CbPlanServiceImpl(accessTokenValidator, cassandraOperation, serverProperties, userUtilityService,
             contentService, esUtilService, requestValidator);
         ReflectionTestUtils.setField(cbPlanService, "userAndOrgService", userUtilityService);
         ReflectionTestUtils.setField(cbPlanService, "contentService", contentService);
@@ -79,9 +71,9 @@ class CbPlanServiceImplTest {
     void testCreateCbPlan_EmptyUserId() {
         ApiRequest request = new ApiRequest();
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("");
-        
+
         ApiResponse response = cbPlanService.createCbPlan(request, "orgId", "token");
-        
+
         assertNotNull(response);
     }
 
@@ -90,11 +82,11 @@ class CbPlanServiceImplTest {
         ApiRequest request = new ApiRequest();
         CbPlanDto dto = new CbPlanDto();
         request.setRequest(dto);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
-        
+
         ApiResponse response = cbPlanService.createCbPlan(request, "orgId", "token");
-        
+
         assertEquals(Constants.FAILED, response.getParams().getStatus());
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getResponseCode());
     }
@@ -110,19 +102,19 @@ class CbPlanServiceImplTest {
         requestMap.put("contentType", "Course");
         requestMap.put("contentList", Arrays.asList("content1"));
         request.setRequest(requestMap);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
-        
+
         ApiResponse cassandraResp = new ApiResponse();
         cassandraResp.put(Constants.RESPONSE, Constants.SUCCESS);
         when(cassandraOperation.insertRecord(anyString(), anyString(), any())).thenReturn(cassandraResp);
-        
+
         ApiResponse lookupResp = new ApiResponse();
         lookupResp.put(Constants.RESPONSE, Constants.SUCCESS);
         when(cassandraOperation.insertBulkRecord(anyString(), anyString(), any())).thenReturn(lookupResp);
-        
+
         ApiResponse response = cbPlanService.createCbPlan(request, "orgId", "token");
-        
+
         assertNotNull(response);
     }
 
@@ -132,11 +124,11 @@ class CbPlanServiceImplTest {
         CbPlanDto dto = new CbPlanDto();
         // Missing required fields to trigger validation error first
         request.setRequest(dto);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
-        
+
         ApiResponse response = cbPlanService.createCbPlan(request, "orgId", "token");
-        
+
         assertEquals(Constants.FAILED, response.getParams().getStatus());
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getResponseCode());
     }
@@ -151,15 +143,15 @@ class CbPlanServiceImplTest {
         requestMap.put("contentType", "Course");
         requestMap.put("contentList", Arrays.asList("content1"));
         request.setRequest(requestMap);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
-        
+
         ApiResponse cassandraResp = new ApiResponse();
         cassandraResp.put(Constants.RESPONSE, Constants.SUCCESS);
         when(cassandraOperation.insertRecord(anyString(), anyString(), any())).thenReturn(cassandraResp);
-        
+
         ApiResponse response = cbPlanService.createCbPlan(request, "orgId", "token");
-        
+
         assertNotNull(response);
     }
 
@@ -174,19 +166,19 @@ class CbPlanServiceImplTest {
         requestMap.put("contentType", "Course");
         requestMap.put("contentList", Arrays.asList("content1"));
         request.setRequest(requestMap);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
-        
+
         ApiResponse cassandraResp = new ApiResponse();
         cassandraResp.put(Constants.RESPONSE, Constants.SUCCESS);
         when(cassandraOperation.insertRecord(anyString(), anyString(), any())).thenReturn(cassandraResp);
-        
+
         ApiResponse lookupResp = new ApiResponse();
         lookupResp.put(Constants.RESPONSE, Constants.SUCCESS);
         when(cassandraOperation.insertBulkRecord(anyString(), anyString(), any())).thenReturn(lookupResp);
-        
+
         ApiResponse response = cbPlanService.createCbPlan(request, "orgId", "token");
-        
+
         assertNotNull(response);
     }
 
@@ -194,9 +186,9 @@ class CbPlanServiceImplTest {
     void testUpdateCbPlan_EmptyUserId() {
         ApiRequest request = new ApiRequest();
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("");
-        
+
         ApiResponse response = cbPlanService.updateCbPlan(request, "orgId", "token", Arrays.asList("role"));
-        
+
         assertNotNull(response);
     }
 
@@ -207,22 +199,22 @@ class CbPlanServiceImplTest {
         updateMap.put("id", "planId");
         updateMap.put("name", "Updated Plan");
         request.setRequest(updateMap);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
-        
+
         Map<String, Object> existingPlan = new HashMap<>();
         existingPlan.put("createdBy", "userId");
         existingPlan.put("status", "draft");
         existingPlan.put("draftData", "{\"name\":\"Test\"}");
         when(cassandraOperation.getRecordsByProperties(anyString(), anyString(), any(), any(), any()))
             .thenReturn(Arrays.asList(existingPlan));
-        
+
         Map<String, Object> updateResp = new HashMap<>();
         updateResp.put(Constants.RESPONSE, Constants.SUCCESS);
         when(cassandraOperation.updateRecord(anyString(), anyString(), any(), any())).thenReturn(updateResp);
-        
+
         ApiResponse response = cbPlanService.updateCbPlan(request, "orgId", "token", Arrays.asList("role"));
-        
+
         assertNotNull(response);
     }
     @Test
@@ -231,22 +223,22 @@ class CbPlanServiceImplTest {
         Map<String, Object> requestMap = new HashMap<>();
         requestMap.put("id", "planId");
         request.setRequest(requestMap);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
-        
+
         Map<String, Object> existingPlan = new HashMap<>();
         existingPlan.put("createdBy", "userId");
         existingPlan.put("status", "draft");
         existingPlan.put("draftData", "{\"name\":\"Test\",\"endDate\":\"2024-12-31\"}");
         when(cassandraOperation.getRecordsByProperties(anyString(), anyString(), any(), any(), any()))
             .thenReturn(Arrays.asList(existingPlan));
-        
+
         Map<String, Object> updateResp = new HashMap<>();
         updateResp.put(Constants.RESPONSE, Constants.SUCCESS);
         when(cassandraOperation.updateRecord(anyString(), anyString(), any(), any())).thenReturn(updateResp);
-        
+
         ApiResponse response = cbPlanService.publishCbPlan(request, "orgId", "token", Arrays.asList("role"));
-        
+
         assertNotNull(response);
     }
 
@@ -254,11 +246,11 @@ class CbPlanServiceImplTest {
     void testReadCbPlan_Success() {
         when(cassandraOperation.getRecordsByProperties(anyString(), anyString(), any(), any(), any()))
             .thenReturn(Arrays.asList(createMockPlan()));
-        
+
         when(contentService.readContent(anyString(), any())).thenReturn(createMockContent());
-        
+
         ApiResponse response = cbPlanService.readCbPlan("planId", "orgId", "token");
-        
+
         assertNotNull(response);
     }
 
@@ -266,9 +258,9 @@ class CbPlanServiceImplTest {
     void testSearchCbPlan_EmptyResult() {
         SearchCriteria criteria = new SearchCriteria();
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("");
-        
+
         ApiResponse response = cbPlanService.searchCbPlan(criteria, "orgId", "token");
-        
+
         assertNotNull(response);
     }
 
@@ -288,7 +280,7 @@ class CbPlanServiceImplTest {
 
         Map<String, Object> mockContent = createMockContent();
         when(contentService.readContent(anyString(), any())).thenReturn(mockContent);
-        
+
         doAnswer(invocation -> {
             Map<String, Map<String, String>> userInfoMap = invocation.getArgument(2);
             Map<String, String> userDetails = new HashMap<>();
@@ -303,7 +295,7 @@ class CbPlanServiceImplTest {
         assertNotNull(response);
         assertEquals(Constants.SUCCESS, response.getParams().getStatus());
         } catch (Exception e) {
-            
+
         }
     }
 
@@ -313,9 +305,9 @@ class CbPlanServiceImplTest {
         Map<String, Object> requestMap = new HashMap<>();
         requestMap.put("id", "planId");
         request.setRequest(requestMap);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
-        
+
         Map<String, Object> existingPlan = new HashMap<>();
         existingPlan.put("createdBy", "userId");
         existingPlan.put("status", "live");
@@ -323,13 +315,13 @@ class CbPlanServiceImplTest {
         existingPlan.put("orgIdList", Arrays.asList("org1"));
         when(cassandraOperation.getRecordsByProperties(anyString(), anyString(), any(), any(), any()))
             .thenReturn(Arrays.asList(existingPlan));
-        
+
         Map<String, Object> updateResp = new HashMap<>();
         updateResp.put(Constants.RESPONSE, Constants.SUCCESS);
         when(cassandraOperation.updateRecord(anyString(), anyString(), any(), any())).thenReturn(updateResp);
-        
+
         ApiResponse response = cbPlanService.retireCbPlan(request, "orgId", "token", Arrays.asList("role"));
-        
+
         assertNotNull(response);
     }
 
@@ -338,9 +330,9 @@ class CbPlanServiceImplTest {
         Map<String, Object> input = new HashMap<>();
         input.put("key1", "value1");
         input.put("instant", Instant.now());
-        
+
         Map<String, Object> result = CbPlanServiceImpl.sanitizeForElastic(input);
-        
+
         assertNotNull(result);
         assertEquals("value1", result.get("key1"));
         assertTrue(result.get("instant") instanceof String);
@@ -379,9 +371,9 @@ class CbPlanServiceImplTest {
         CbPlanDto dto = new CbPlanDto();
         dto.setName("Test");
         dto.setEndDate(new Date());
-        
+
         List<String> result = (List<String>) ReflectionTestUtils.invokeMethod(cbPlanService, "validateCbPlanRequest", dto);
-        
+
         assertNotNull(result);
     }
 
@@ -392,9 +384,9 @@ class CbPlanServiceImplTest {
         CbPlanDto dto = new CbPlanDto();
         ApiRequest request = new ApiRequest();
         request.setRequest(new HashMap<>());
-        
+
         List<String> result = (List<String>) ReflectionTestUtils.invokeMethod(cbPlanService, "validateContextData", dto, request);
-        
+
         assertNotNull(result);
         assertTrue(result.isEmpty());
     }
@@ -403,7 +395,7 @@ class CbPlanServiceImplTest {
     @Disabled("This test is ignored due to optimization code changes")
     void testInsertCustomOrgLookup_EmptyList() {
         ApiResponse result = (ApiResponse) ReflectionTestUtils.invokeMethod(cbPlanService, "insertCustomOrgLookup", "planId", new ArrayList<>(), new Date());
-        
+
         assertNotNull(result);
         assertEquals(Constants.FAILED, result.getParams().getStatus());
     }
@@ -414,9 +406,9 @@ class CbPlanServiceImplTest {
         ApiResponse cassandraResp = new ApiResponse();
         cassandraResp.put(Constants.RESPONSE, Constants.SUCCESS);
         when(cassandraOperation.insertRecord(anyString(), anyString(), any())).thenReturn(cassandraResp);
-        
+
         ApiResponse result = (ApiResponse) ReflectionTestUtils.invokeMethod(cbPlanService, "insertAllOrgLookup", "planId", new Date());
-        
+
         assertNotNull(result);
     }
 
@@ -426,13 +418,13 @@ class CbPlanServiceImplTest {
     void testMergeCbPlanData() {
         Map<String, Object> requestMap = new HashMap<>();
         requestMap.put("name", "New Name");
-        
+
         Map<String, Object> existingMap = new HashMap<>();
         existingMap.put("name", "Old Name");
         existingMap.put("contentType", "Course");
-        
+
         Map<String, Object> result = (Map<String, Object>) ReflectionTestUtils.invokeMethod(cbPlanService, "mergeCbPlanData", requestMap, existingMap);
-        
+
         assertNotNull(result);
         assertEquals("New Name", result.get("name"));
     }
@@ -442,13 +434,13 @@ class CbPlanServiceImplTest {
     void testUpdateDraftInfo() {
         Map<String, Object> updatedPlan = new HashMap<>();
         updatedPlan.put("name", "Updated");
-        
+
         Map<String, Object> cbPlan = new HashMap<>();
         cbPlan.put("draftData", "");
         cbPlan.put("name", "Original");
-        
+
         String result = (String) ReflectionTestUtils.invokeMethod(cbPlanService, "updateDraftInfo", updatedPlan, cbPlan);
-        
+
         assertNotNull(result);
     }
 
@@ -469,9 +461,9 @@ class CbPlanServiceImplTest {
         userGroups.add(userGroup);
         accessControl.put("userGroups", userGroups);
         contextData.put("accessControl", accessControl);
-        
+
         List<String> result = (List<String>) ReflectionTestUtils.invokeMethod(cbPlanService, "extractRootOrgIds", contextData);
-        
+
         assertNotNull(result);
         assertEquals(2, result.size());
     }
@@ -481,9 +473,9 @@ class CbPlanServiceImplTest {
         Map<String, Object> updateResp = new HashMap<>();
         updateResp.put(Constants.RESPONSE, Constants.SUCCESS);
         when(cassandraOperation.updateRecord(anyString(), anyString(), any(), any())).thenReturn(updateResp);
-        
+
         ApiResponse result = (ApiResponse) ReflectionTestUtils.invokeMethod(cbPlanService, "archiveCustomOrgLookup", "planId", Arrays.asList("org1"));
-        
+
         assertNotNull(result);
     }
 
@@ -507,7 +499,7 @@ class CbPlanServiceImplTest {
         requestMap.put("orgScope", "single");
         requestMap.put("contentType", "Course");
         requestMap.put("contentList", Arrays.asList("content1"));
-        
+
         Map<String, Object> contextData = new HashMap<>();
         Map<String, Object> accessControl = new HashMap<>();
         List<Map<String, Object>> userGroups = new ArrayList<>();
@@ -522,13 +514,13 @@ class CbPlanServiceImplTest {
         accessControl.put("userGroups", userGroups);
         contextData.put("accessControl", accessControl);
         requestMap.put("contextDataRequest", contextData);
-        
+
         request.setRequest(requestMap);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
-        
+
         ApiResponse response = cbPlanService.createCbPlan(request, "orgId", "token");
-        
+
         assertNotNull(response);
     }
 
@@ -541,19 +533,19 @@ class CbPlanServiceImplTest {
         requestMap.put("orgScope", "single");
         requestMap.put("contentType", "Course");
         requestMap.put("contentList", Arrays.asList("content1"));
-        
+
         Map<String, Object> contextData = new HashMap<>();
         Map<String, Object> accessControl = new HashMap<>();
         accessControl.put("userGroups", new ArrayList<>());
         contextData.put("accessControl", accessControl);
         requestMap.put("contextDataRequest", contextData);
-        
+
         request.setRequest(requestMap);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
-        
+
         ApiResponse response = cbPlanService.createCbPlan(request, "orgId", "token");
-        
+
         assertEquals(Constants.FAILED, response.getParams().getStatus());
     }
 
@@ -564,18 +556,18 @@ class CbPlanServiceImplTest {
         updateMap.put("id", "planId");
         updateMap.put("name", "Updated Plan");
         request.setRequest(updateMap);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
-        
+
         Map<String, Object> existingPlan = new HashMap<>();
         existingPlan.put("createdBy", "otherUser");
         when(cassandraOperation.getRecordsByProperties(anyString(), anyString(), any(), any(), any()))
             .thenReturn(Arrays.asList(existingPlan));
-        
+
         when(serverProperties.getCbPlanUpdatePublishAuthorizedRoles()).thenReturn(Arrays.asList("admin"));
-        
+
         ApiResponse response = cbPlanService.updateCbPlan(request, "orgId", "token", Arrays.asList("user"));
-        
+
         assertEquals(Constants.FAILED, response.getParams().getStatus());
         assertEquals(HttpStatus.BAD_REQUEST, response.getResponseCode());
     }
@@ -587,18 +579,18 @@ class CbPlanServiceImplTest {
         updateMap.put("id", "planId");
         updateMap.put("invalidField", "value");
         request.setRequest(updateMap);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
-        
+
         Map<String, Object> existingPlan = new HashMap<>();
         existingPlan.put("createdBy", "userId");
         existingPlan.put("status", Constants.LIVE);
         existingPlan.put("cbPublishedBy", "userId");
         when(cassandraOperation.getRecordsByProperties(anyString(), anyString(), any(), any(), any()))
             .thenReturn(Arrays.asList(existingPlan));
-        
+
         ApiResponse response = cbPlanService.updateCbPlan(request, "orgId", "token", Arrays.asList("role"));
-        
+
         assertEquals(Constants.FAILED, response.getParams().getStatus());
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getResponseCode());
     }
@@ -609,13 +601,13 @@ class CbPlanServiceImplTest {
         Map<String, Object> updateMap = new HashMap<>();
         updateMap.put("id", "planId");
         request.setRequest(updateMap);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
         when(cassandraOperation.getRecordsByProperties(anyString(), anyString(), any(), any(), any()))
             .thenReturn(new ArrayList<>());
-        
+
         ApiResponse response = cbPlanService.updateCbPlan(request, "orgId", "token", Arrays.asList("role"));
-        
+
         assertEquals(Constants.FAILED, response.getParams().getStatus());
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getResponseCode());
     }
@@ -626,11 +618,11 @@ class CbPlanServiceImplTest {
         Map<String, Object> updateMap = new HashMap<>();
         updateMap.put("name", "Updated Plan");
         request.setRequest(updateMap);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
-        
+
         ApiResponse response = cbPlanService.updateCbPlan(request, "orgId", "token", Arrays.asList("role"));
-        
+
         assertEquals(Constants.FAILED, response.getParams().getStatus());
         assertEquals(HttpStatus.BAD_REQUEST, response.getResponseCode());
     }
@@ -642,21 +634,21 @@ class CbPlanServiceImplTest {
         updateMap.put("id", "planId");
         updateMap.put("name", "Updated Plan");
         request.setRequest(updateMap);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
-        
+
         Map<String, Object> existingPlan = new HashMap<>();
         existingPlan.put("createdBy", "userId");
         existingPlan.put("orgIdList", Arrays.asList("org1"));
         when(cassandraOperation.getRecordsByProperties(anyString(), anyString(), any(), any(), any()))
             .thenReturn(Arrays.asList(existingPlan));
-        
+
         Map<String, Object> updateResp = new HashMap<>();
         updateResp.put(Constants.RESPONSE, Constants.SUCCESS);
         when(cassandraOperation.updateRecord(anyString(), anyString(), any(), any())).thenReturn(updateResp);
-        
+
         ApiResponse response = cbPlanService.updateCbPlan(request, "orgId", "token", Arrays.asList("role"));
-        
+
         assertNotNull(response);
         assertEquals(Constants.FAILED, response.getParams().getStatus());
     }
@@ -668,23 +660,23 @@ class CbPlanServiceImplTest {
         updateMap.put("id", "planId");
         updateMap.put("name", "Updated Plan");
         request.setRequest(updateMap);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
-        
+
         Map<String, Object> existingPlan = new HashMap<>();
         existingPlan.put("createdBy", "userId");
         existingPlan.put("orgIdList", Arrays.asList("org1"));
         when(cassandraOperation.getRecordsByProperties(anyString(), anyString(), any(), any(), any()))
             .thenReturn(Arrays.asList(existingPlan));
-        
+
         Map<String, Object> updateResp = new HashMap<>();
         updateResp.put(Constants.RESPONSE, Constants.SUCCESS);
         when(cassandraOperation.updateRecord(anyString(), anyString(), any(), any())).thenReturn(updateResp);
-        
+
         doThrow(new RuntimeException("Delete error")).when(cassandraOperation).deleteRecord(anyString(), anyString(), any());
-        
+
         ApiResponse response = cbPlanService.updateCbPlan(request, "orgId", "token", Arrays.asList("role"));
-        
+
         assertNotNull(response);
         assertEquals(Constants.FAILED, response.getParams().getStatus());
     }
@@ -695,13 +687,13 @@ class CbPlanServiceImplTest {
         Map<String, Object> updateMap = new HashMap<>();
         updateMap.put("id", "planId");
         request.setRequest(updateMap);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
         when(cassandraOperation.getRecordsByProperties(anyString(), anyString(), any(), any(), any()))
             .thenThrow(new RuntimeException("Database error"));
-        
+
         ApiResponse response = cbPlanService.updateCbPlan(request, "orgId", "token", Arrays.asList("role"));
-        
+
         assertEquals(Constants.FAILED, response.getParams().getStatus());
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getResponseCode());
     }
@@ -741,7 +733,7 @@ class CbPlanServiceImplTest {
     void testGetDesignationForUser() {
         String profileDetails = "{\"professionalDetails\":[{\"designation\":\"Manager\"}]}";
         String result = (String) ReflectionTestUtils.invokeMethod(cbPlanService, "getDesignationForUser", profileDetails, "userId");
-        
+
         assertEquals("Manager", result);
     }
 
@@ -749,7 +741,7 @@ class CbPlanServiceImplTest {
     @Disabled("This test is ignored due to optimization code changes")
     void testGetDesignationForUser_EmptyProfile() {
         String result = (String) ReflectionTestUtils.invokeMethod(cbPlanService, "getDesignationForUser", "", "userId");
-        
+
         assertEquals("", result);
     }
 
@@ -757,7 +749,7 @@ class CbPlanServiceImplTest {
     @Disabled("This test is ignored due to optimization code changes")
     void testGetDesignationForUser_InvalidJson() {
         String result = (String) ReflectionTestUtils.invokeMethod(cbPlanService, "getDesignationForUser", "invalid-json", "userId");
-        
+
         assertEquals("", result);
     }
 
@@ -865,9 +857,9 @@ class CbPlanServiceImplTest {
     void testCreateSuccessResponse() {
         ApiResponse apiResponse = new ApiResponse();
         apiResponse.put("key", "value");
-        
+
         ReflectionTestUtils.invokeMethod(cbPlanService, "createSuccessResponse", apiResponse);
-        
+
         assertNotNull(apiResponse);
         assertEquals(Constants.SUCCESS, apiResponse.getParams().getStatus());
     }
@@ -878,13 +870,13 @@ class CbPlanServiceImplTest {
         Map<String, Object> cbPlan = new HashMap<>();
         cbPlan.put("name", "Original");
         cbPlan.put("status", "draft");
-        
+
         CbPlanDto dto = new CbPlanDto();
         dto.setName("Updated");
         dto.setEndDate(new Date());
-        
+
         ReflectionTestUtils.invokeMethod(cbPlanService, "updateCbPlanData", cbPlan, dto);
-        
+
         assertEquals("Updated", cbPlan.get("name"));
     }
 
@@ -895,7 +887,7 @@ class CbPlanServiceImplTest {
         CbPlanDto dto = new CbPlanDto();
         ApiRequest request = new ApiRequest();
         Map<String, Object> requestMap = new HashMap<>();
-        
+
         Map<String, Object> contextData = new HashMap<>();
         Map<String, Object> accessControl = new HashMap<>();
         List<Map<String, Object>> userGroups = new ArrayList<>();
@@ -910,11 +902,11 @@ class CbPlanServiceImplTest {
         accessControl.put("userGroups", userGroups);
         contextData.put("accessControl", accessControl);
         requestMap.put("contextDataRequest", contextData);
-        
+
         request.setRequest(requestMap);
-        
+
         List<String> result = (List<String>) ReflectionTestUtils.invokeMethod(cbPlanService, "validateContextData", dto, request);
-        
+
         assertNotNull(result);
         assertTrue(result.isEmpty());
     }
@@ -926,17 +918,17 @@ class CbPlanServiceImplTest {
         CbPlanDto dto = new CbPlanDto();
         ApiRequest request = new ApiRequest();
         Map<String, Object> requestMap = new HashMap<>();
-        
+
         Map<String, Object> contextData = new HashMap<>();
         Map<String, Object> accessControl = new HashMap<>();
         accessControl.put("userGroups", new ArrayList<>());
         contextData.put("accessControl", accessControl);
         requestMap.put("contextDataRequest", contextData);
-        
+
         request.setRequest(requestMap);
-        
+
         List<String> result = (List<String>) ReflectionTestUtils.invokeMethod(cbPlanService, "validateContextData", dto, request);
-        
+
         assertNotNull(result);
         assertTrue(result.isEmpty());
     }
@@ -947,9 +939,9 @@ class CbPlanServiceImplTest {
         ApiResponse cassandraResp = new ApiResponse();
         cassandraResp.getParams().setStatus(Constants.SUCCESS);
         when(cassandraOperation.insertBulkRecord(anyString(), anyString(), any())).thenReturn(cassandraResp);
-        
+
         ApiResponse result = (ApiResponse) ReflectionTestUtils.invokeMethod(cbPlanService, "insertCustomOrgLookup", "planId", Arrays.asList("org1", "org2"), new Date());
-        
+
         assertNotNull(result);
         assertEquals(Constants.SUCCESS, result.getParams().getStatus());
     }
@@ -965,16 +957,16 @@ class CbPlanServiceImplTest {
         requestMap.put("contentType", "Course");
         requestMap.put("contentList", Arrays.asList("content1"));
         request.setRequest(requestMap);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
-        
+
         ApiResponse cassandraResp = new ApiResponse();
         cassandraResp.put(Constants.RESPONSE, Constants.FAILED);
         cassandraResp.getParams().setErr("DB Error");
         when(cassandraOperation.insertRecord(anyString(), anyString(), any())).thenReturn(cassandraResp);
-        
+
         ApiResponse response = cbPlanService.createCbPlan(request, "orgId", "token");
-        
+
         assertEquals(Constants.FAILED, response.getParams().getStatus());
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getResponseCode());
     }
@@ -990,20 +982,20 @@ class CbPlanServiceImplTest {
         requestMap.put("contentType", "Course");
         requestMap.put("contentList", Arrays.asList("content1"));
         request.setRequest(requestMap);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
-        
+
         ApiResponse cassandraResp = new ApiResponse();
         cassandraResp.put(Constants.RESPONSE, Constants.SUCCESS);
         when(cassandraOperation.insertRecord(anyString(), anyString(), any())).thenReturn(cassandraResp);
-        
+
         ApiResponse lookupResp = new ApiResponse();
         lookupResp.put(Constants.RESPONSE, Constants.FAILED);
         lookupResp.getParams().setErr("Lookup Error");
         when(cassandraOperation.insertBulkRecord(anyString(), anyString(), any())).thenReturn(lookupResp);
-        
+
         ApiResponse response = cbPlanService.createCbPlan(request, "orgId", "token");
-        
+
         assertEquals(Constants.FAILED, response.getParams().getStatus());
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getResponseCode());
     }
@@ -1013,11 +1005,11 @@ class CbPlanServiceImplTest {
         ApiRequest request = new ApiRequest();
         Map<String, Object> requestMap = new HashMap<>();
         request.setRequest(requestMap);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
-        
+
         ApiResponse response = cbPlanService.publishCbPlan(request, "orgId", "token", Arrays.asList("role"));
-        
+
         assertEquals(Constants.FAILED, response.getParams().getStatus());
         assertEquals(HttpStatus.BAD_REQUEST, response.getResponseCode());
     }
@@ -1028,13 +1020,13 @@ class CbPlanServiceImplTest {
         Map<String, Object> requestMap = new HashMap<>();
         requestMap.put("id", "planId");
         request.setRequest(requestMap);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
         when(cassandraOperation.getRecordsByProperties(anyString(), anyString(), any(), any(), any()))
             .thenReturn(new ArrayList<>());
-        
+
         ApiResponse response = cbPlanService.publishCbPlan(request, "orgId", "token", Arrays.asList("role"));
-        
+
         assertEquals(Constants.FAILED, response.getParams().getStatus());
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getResponseCode());
     }
@@ -1045,18 +1037,18 @@ class CbPlanServiceImplTest {
         Map<String, Object> requestMap = new HashMap<>();
         requestMap.put("id", "planId");
         request.setRequest(requestMap);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
-        
+
         Map<String, Object> existingPlan = new HashMap<>();
         existingPlan.put("createdBy", "otherUser");
         when(cassandraOperation.getRecordsByProperties(anyString(), anyString(), any(), any(), any()))
             .thenReturn(Arrays.asList(existingPlan));
-        
+
         when(serverProperties.getCbPlanUpdatePublishAuthorizedRoles()).thenReturn(Arrays.asList("admin"));
-        
+
         ApiResponse response = cbPlanService.publishCbPlan(request, "orgId", "token", Arrays.asList("user"));
-        
+
         assertEquals(Constants.FAILED, response.getParams().getStatus());
         assertEquals(HttpStatus.BAD_REQUEST, response.getResponseCode());
     }
@@ -1067,18 +1059,18 @@ class CbPlanServiceImplTest {
         Map<String, Object> requestMap = new HashMap<>();
         requestMap.put("id", "planId");
         request.setRequest(requestMap);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
-        
+
         Map<String, Object> existingPlan = new HashMap<>();
         existingPlan.put("createdBy", "userId");
         existingPlan.put("status", "live");
         existingPlan.put("draftData", null);
         when(cassandraOperation.getRecordsByProperties(anyString(), anyString(), any(), any(), any()))
             .thenReturn(Arrays.asList(existingPlan));
-        
+
         ApiResponse response = cbPlanService.publishCbPlan(request, "orgId", "token", Arrays.asList("role"));
-        
+
         assertEquals(Constants.FAILED, response.getParams().getStatus());
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getResponseCode());
     }
@@ -1088,11 +1080,11 @@ class CbPlanServiceImplTest {
         ApiRequest request = new ApiRequest();
         Map<String, Object> requestMap = new HashMap<>();
         request.setRequest(requestMap);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
 
         ApiResponse response = cbPlanService.retireCbPlan(request, "orgId", "token", Arrays.asList("role"));
-        
+
         assertNotNull(response);
         assertEquals(Constants.FAILED, response.getParams().getStatus());
     }
@@ -1103,13 +1095,13 @@ class CbPlanServiceImplTest {
         Map<String, Object> requestMap = new HashMap<>();
         requestMap.put("id", "planId");
         request.setRequest(requestMap);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
         when(cassandraOperation.getRecordsByProperties(anyString(), anyString(), any(), any(), any()))
             .thenReturn(new ArrayList<>());
-        
+
         ApiResponse response = cbPlanService.retireCbPlan(request, "orgId", "token", Arrays.asList("role"));
-        
+
         assertEquals(Constants.FAILED, response.getParams().getStatus());
         assertEquals(HttpStatus.BAD_REQUEST, response.getResponseCode());
     }
@@ -1120,17 +1112,17 @@ class CbPlanServiceImplTest {
         Map<String, Object> requestMap = new HashMap<>();
         requestMap.put("id", "planId");
         request.setRequest(requestMap);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
-        
+
         Map<String, Object> existingPlan = new HashMap<>();
         existingPlan.put("createdBy", "userId");
         existingPlan.put("status", "retired");
         when(cassandraOperation.getRecordsByProperties(anyString(), anyString(), any(), any(), any()))
             .thenReturn(Arrays.asList(existingPlan));
-        
+
         ApiResponse response = cbPlanService.retireCbPlan(request, "orgId", "token", Arrays.asList("role"));
-        
+
         assertEquals(Constants.FAILED, response.getParams().getStatus());
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getResponseCode());
     }
@@ -1162,9 +1154,9 @@ class CbPlanServiceImplTest {
         Map<String, String> userInfo = new HashMap<>();
         userInfo.put("profileDetails", "{\"professionalDetails\":[{\"designation\":\"Developer\"}]}");
         userInfoMap.put("userId", userInfo);
-        
+
         ReflectionTestUtils.invokeMethod(cbPlanService, "enrichUserInfo", userInfoMap);
-        
+
         assertEquals("Developer", userInfoMap.get("userId").get("designation"));
     }
 
@@ -1175,9 +1167,9 @@ class CbPlanServiceImplTest {
         Map<String, String> userInfo = new HashMap<>();
         userInfo.put("designation", "Existing");
         userInfoMap.put("userId", userInfo);
-        
+
         ReflectionTestUtils.invokeMethod(cbPlanService, "enrichUserInfo", userInfoMap);
-        
+
         assertEquals("Existing", userInfoMap.get("userId").get("designation"));
     }
 
@@ -1254,15 +1246,15 @@ class CbPlanServiceImplTest {
     @Disabled("This test is ignored due to optimization code changes")
     void testSearchCbPlan_NoResults() throws Exception {
         SearchCriteria criteria = new SearchCriteria();
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
-        
+
         SearchResult searchResult = new SearchResult();
         searchResult.setData(new ArrayList<>());
         when(esUtilService.searchDocuments(anyString(), any(), anyString())).thenReturn(searchResult);
-        
+
         ApiResponse response = cbPlanService.searchCbPlan(criteria, "orgId", "token");
-        
+
         assertNotNull(response);
         assertEquals(Constants.SUCCESS, response.getParams().getStatus());
     }
@@ -1348,9 +1340,9 @@ class CbPlanServiceImplTest {
         contextData.put("accessControl", accessControl);
         requestMap.put("contextDataRequest", contextData);
         request.setRequest(requestMap);
-        
+
         List<String> result = (List<String>) ReflectionTestUtils.invokeMethod(cbPlanService, "validateContextData", dto, request);
-        
+
         assertNotNull(result);
         assertTrue(result.isEmpty());
     }
@@ -1363,22 +1355,22 @@ class CbPlanServiceImplTest {
         requestMap.put("name", "Test Plan");
         requestMap.put("endDate", new Date());
         requestMap.put("orgScope", "single");
-        requestMap.put("orgIdList", Arrays.asList("org1"));
+        requestMap.put("orgIdList", List.of("org1"));
         requestMap.put("contentType", "Course");
-        requestMap.put("contentList", Arrays.asList("content1"));
+        requestMap.put("contentList", List.of("content1"));
         request.setRequest(requestMap);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
-        
+
         ApiResponse cassandraResp = new ApiResponse();
         cassandraResp.put(Constants.RESPONSE, Constants.SUCCESS);
         when(cassandraOperation.insertRecord(anyString(), anyString(), any())).thenReturn(cassandraResp);
-        
+
         doThrow(new RuntimeException("ES error")).when(esUtilService)
             .addDocument(anyString(), anyString(), anyString(), any(), anyString());
-        
+
         ApiResponse response = cbPlanService.createCbPlan(request, "orgId", "token");
-        
+
         assertEquals(Constants.FAILED, response.getParams().getStatus());
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getResponseCode());
     }
@@ -1388,11 +1380,11 @@ class CbPlanServiceImplTest {
     void testUpdateDraftInfo_NullDraftData() {
         Map<String, Object> updatedCbPlan = new HashMap<>();
         updatedCbPlan.put("name", "Updated Plan");
-        
+
         Map<String, Object> cbPlan = new HashMap<>();
         cbPlan.put("draftData", null);
         cbPlan.put("name", "Original Plan");
-        
+
         try {
             String result = (String) ReflectionTestUtils.invokeMethod(cbPlanService, "updateDraftInfo", updatedCbPlan, cbPlan);
             assertNotNull(result);
@@ -1406,9 +1398,9 @@ class CbPlanServiceImplTest {
     void testPublishCbPlan_EmptyUserId() {
         ApiRequest request = new ApiRequest();
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("");
-        
-        ApiResponse response = cbPlanService.publishCbPlan(request, "orgId", "token", Arrays.asList("role"));
-        
+
+        ApiResponse response = cbPlanService.publishCbPlan(request, "orgId", "token", List.of("role"));
+
         assertNotNull(response);
         assertEquals(Constants.SUCCESS, response.getParams().getStatus());
     }
@@ -1419,23 +1411,23 @@ class CbPlanServiceImplTest {
         Map<String, Object> requestMap = new HashMap<>();
         requestMap.put("id", "planId");
         request.setRequest(requestMap);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
-        
+
         Map<String, Object> existingPlan = new HashMap<>();
         existingPlan.put("createdBy", "userId");
         existingPlan.put("status", "draft");
         existingPlan.put("draftData", "{\"name\":\"Test Plan\",\"endDate\":\"2024-12-31\"}");
         when(cassandraOperation.getRecordsByProperties(anyString(), anyString(), any(), any(), any()))
             .thenReturn(Arrays.asList(existingPlan));
-        
+
         Map<String, Object> updateResp = new HashMap<>();
         updateResp.put(Constants.RESPONSE, Constants.FAILED);
         updateResp.put(Constants.ERROR_MESSAGE, "DB error");
         when(cassandraOperation.updateRecord(anyString(), anyString(), any(), any())).thenReturn(updateResp);
-        
-        ApiResponse response = cbPlanService.publishCbPlan(request, "orgId", "token", Arrays.asList("role"));
-        
+
+        ApiResponse response = cbPlanService.publishCbPlan(request, "orgId", "token", List.of("role"));
+
         assertEquals(Constants.FAILED, response.getParams().getStatus());
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getResponseCode());
     }
@@ -1444,9 +1436,9 @@ class CbPlanServiceImplTest {
     void testRetireCbPlan_EmptyUserId() {
         ApiRequest request = new ApiRequest();
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("");
-        
-        ApiResponse response = cbPlanService.retireCbPlan(request, "orgId", "token", Arrays.asList("role"));
-        
+
+        ApiResponse response = cbPlanService.retireCbPlan(request, "orgId", "token", List.of("role"));
+
         assertNotNull(response);
         assertEquals(Constants.FAILED, response.getParams().getStatus());
     }
@@ -1458,24 +1450,24 @@ class CbPlanServiceImplTest {
         Map<String, Object> requestMap = new HashMap<>();
         requestMap.put("id", "planId");
         request.setRequest(requestMap);
-        
+
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
-        
+
         Map<String, Object> existingPlan = new HashMap<>();
         existingPlan.put("createdBy", "userId");
         existingPlan.put("status", "live");
         when(cassandraOperation.getRecordsByProperties(anyString(), anyString(), any(), any(), any()))
-            .thenReturn(Arrays.asList(existingPlan));
-        
+            .thenReturn(List.of(existingPlan));
+
         Map<String, Object> updateResp = new HashMap<>();
         updateResp.put(Constants.RESPONSE, Constants.SUCCESS);
         when(cassandraOperation.updateRecord(anyString(), anyString(), any(), any())).thenReturn(updateResp);
-        
+
         doThrow(new RuntimeException("ES error")).when(esUtilService)
             .addDocument(anyString(), anyString(), anyString(), any(), anyString());
-        
+
         ApiResponse response = cbPlanService.retireCbPlan(request, "orgId", "token", Arrays.asList("role"));
-        
+
         assertEquals(Constants.FAILED, response.getParams().getStatus());
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getResponseCode());
     }
@@ -1484,9 +1476,9 @@ class CbPlanServiceImplTest {
     void testReadCbPlan_NotFound() {
         when(cassandraOperation.getRecordsByProperties(anyString(), anyString(), any(), any(), any()))
             .thenReturn(new ArrayList<>());
-        
+
         ApiResponse response = cbPlanService.readCbPlan("planId", "orgId", "token");
-        
+
         assertEquals(Constants.FAILED, response.getParams().getStatus());
         assertEquals(HttpStatus.BAD_REQUEST, response.getResponseCode());
     }
@@ -1495,18 +1487,18 @@ class CbPlanServiceImplTest {
     @Disabled("This test is ignored due to optimization code changes")
     void testReadCbPlan_ContentError() {
         Map<String, Object> cbPlan = new HashMap<>();
-        cbPlan.put("contentList", Arrays.asList("content1"));
+        cbPlan.put("contentList", List.of("content1"));
         cbPlan.put("status", "live");
         cbPlan.put("draftData", "");
-        
+
         when(cassandraOperation.getRecordsByProperties(anyString(), anyString(), any(), any(), any()))
-            .thenReturn(Arrays.asList(cbPlan));
-        
+            .thenReturn(List.of(cbPlan));
+
         when(contentService.readContent(anyString(), any()))
             .thenThrow(new RuntimeException("Content service error"));
-        
+
         ApiResponse response = cbPlanService.readCbPlan("planId", "orgId", "token");
-        
+
         assertEquals(Constants.FAILED, response.getParams().getStatus());
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getResponseCode());
     }
@@ -1517,7 +1509,7 @@ class CbPlanServiceImplTest {
         when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("userId");
         when(esUtilService.searchDocuments(anyString(), any(), anyString()))
             .thenThrow(new RuntimeException("Test exception"));
-        
+
         try {
             ApiResponse response = cbPlanService.searchCbPlan(criteria, "orgId", "token");
             fail("Expected CustomException to be thrown");
@@ -1525,4 +1517,223 @@ class CbPlanServiceImplTest {
             assertTrue(e.getMessage().contains("error while processing"));
         }
     }
+
+    @Test
+    void testParseEndDate_AllBranches() {
+        Instant now = Instant.now();
+        Object r1 = ReflectionTestUtils.invokeMethod(cbPlanService, "parseEndDate", Date.from(now));
+        assertNotNull(r1);
+        Object r2 = ReflectionTestUtils.invokeMethod(cbPlanService, "parseEndDate", now);
+        assertNotNull(r2);
+        Object r3 = ReflectionTestUtils.invokeMethod(cbPlanService, "parseEndDate", now.toEpochMilli());
+        assertNotNull(r3);
+        Object r4 = ReflectionTestUtils.invokeMethod(cbPlanService, "parseEndDate", now.toString());
+        assertNotNull(r4);
+        Object r5 = ReflectionTestUtils.invokeMethod(cbPlanService, "parseEndDate", "2024-12-31");
+        assertNotNull(r5);
+        Object r6 = ReflectionTestUtils.invokeMethod(cbPlanService, "parseEndDate", new Object());
+        assertNull(r6);
+    }
+
+
+    @Test
+    @SuppressWarnings("unchecked")
+    void testExtractUniqueRootOrgIds_AllPaths() {
+        // null contextData → empty set
+        Set<String> empty = (Set<String>) ReflectionTestUtils.invokeMethod(cbPlanService, "extractUniqueRootOrgIds", new HashMap<>());
+        assertNotNull(empty);
+        assertTrue(empty.isEmpty());
+
+        // contextData as Map
+        Map<String, Object> crit = Map.of(Constants.CRITERIA_KEY, Constants.ROOT_ORG_ID,
+                Constants.CRITERIA_VALUE, List.of("o1"));
+        Map<String, Object> ug = Map.of(Constants.USER_GROUP_CRITERIA_LIST, List.of(crit));
+        Map<String, Object> ac = Map.of(Constants.USER_GROUPS, List.of(ug));
+        Map<String, Object> raw = Map.of(Constants.CONTEXT_DATA_REQUEST, Map.of(Constants.ACCESS_CONTROL, ac));
+        Set<String> result = (Set<String>) ReflectionTestUtils.invokeMethod(cbPlanService, "extractUniqueRootOrgIds", raw);
+        assertEquals(Set.of("o1"), result);
+
+        // contextData as JSON string
+        String json = "{\"accessControl\":{\"userGroups\":[{\"userGroupCriteriaList\":[{\"criteriaKey\":\"rootOrgId\",\"criteriaValue\":[\"o2\"]}]}]}}";
+        Set<String> result2 = (Set<String>) ReflectionTestUtils.invokeMethod(cbPlanService, "extractUniqueRootOrgIds",
+                Map.of(Constants.CONTEXT_DATA_REQUEST, json));
+        assertEquals(Set.of("o2"), result2);
+    }
+
+    @Test
+    void testParseToDate_AllBranches() {
+        assertNull(cbPlanService.parseToDate(null));
+        assertNotNull(cbPlanService.parseToDate("2024-12-31"));
+        assertNotNull(cbPlanService.parseToDate(Instant.now()));
+        assertNotNull(cbPlanService.parseToDate(new java.sql.Timestamp(System.currentTimeMillis())));
+        assertNotNull(cbPlanService.parseToDate(new Date()));
+    }
+
+
+    @Test
+    void testCreateSuccessResponse_SetsStatusAndHttpOK() {
+        ApiResponse apiResponse = new ApiResponse();
+        ReflectionTestUtils.invokeMethod(cbPlanService, "createSuccessResponse", apiResponse);
+        assertEquals(Constants.SUCCESS, apiResponse.getParams().getStatus());
+        assertEquals(HttpStatus.OK, apiResponse.getResponseCode());
+    }
+
+    @Test
+    void testSanitizeForElastic_ConvertsInstantToString() {
+        Map<String, Object> input = new HashMap<>();
+        input.put("a", "b");
+        input.put("instant", Instant.now());
+        Map<String, Object> out = CbPlanServiceImpl.sanitizeForElastic(input);
+        assertInstanceOf(String.class, out.get("instant"));
+        assertEquals("b", out.get("a"));
+    }
+
+    @Test
+    void testSearchCbPlan_ExceptionPath() throws Exception {
+        when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("u1");
+        when(esUtilService.searchDocuments(anyString(), any(), anyString())).thenThrow(new RuntimeException("boom"));
+        SearchCriteria sc = new SearchCriteria();
+        assertThrows(RuntimeException.class, () -> cbPlanService.searchCbPlan(sc, "org", "t"));
+    }
+
+    @Test
+    void testReadCbPlan_EmptyAndErrorPaths() {
+        ApiResponse r1 = cbPlanService.readCbPlan("", "org", "t");
+        assertEquals(HttpStatus.BAD_REQUEST, r1.getResponseCode());
+        when(cassandraOperation.getRecordsByProperties(anyString(), anyString(), anyMap(), any(), any()))
+                .thenThrow(new RuntimeException("fail"));
+        ApiResponse r2 = cbPlanService.readCbPlan("id", "org", "t");
+        assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, r2.getResponseCode());
+    }
+
+    @Test
+    void testRetireCbPlan_CbPlanAlreadyArchived() {
+        when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("user");
+        Map<String, Object> cbPlan = new HashMap<>();
+        cbPlan.put(Constants.CREATED_BY, "user");
+        cbPlan.put(Constants.STATUS, Constants.CB_RETIRE);
+        when(cassandraOperation.getRecordsByProperties(anyString(), anyString(), any(), any(), any()))
+                .thenReturn(List.of(cbPlan));
+        ApiRequest req = new ApiRequest();
+        req.setRequest(Map.of(Constants.ID, "p1"));
+        ApiResponse resp = cbPlanService.retireCbPlan(req, "org", "t", List.of("role"));
+        assertEquals(HttpStatus.BAD_REQUEST, resp.getResponseCode());
+    }
+
+    @Test
+    void testUpdateCbPlan_CassandraThrows() {
+        when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("u1");
+        when(cassandraOperation.getRecordsByProperties(anyString(), anyString(), any(), any(), any()))
+                .thenThrow(new RuntimeException("fail"));
+        ApiRequest req = new ApiRequest();
+        req.setRequest(Map.of(Constants.ID, "pid"));
+        ApiResponse resp = cbPlanService.updateCbPlan(req, "org", "t", List.of("r"));
+        assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, resp.getResponseCode());
+    }
+
+    @Test
+    void testPublishCbPlan_InvalidState() {
+        when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("u1");
+        Map<String, Object> existing = new HashMap<>();
+        existing.put(Constants.CREATED_BY, "u1");
+        existing.put(Constants.STATUS, "archived"); // not DRAFT
+        when(cassandraOperation.getRecordsByProperties(anyString(), anyString(), any(), any(), any()))
+                .thenReturn(List.of(existing));
+        ApiRequest req = new ApiRequest();
+        req.setRequest(Map.of(Constants.ID, "id"));
+        ApiResponse resp = cbPlanService.publishCbPlan(req, "org", "t", List.of("role"));
+        assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, resp.getResponseCode());
+    }
+
+
+    @Test
+    void testUpdateCbPlan_GetRootOrgFails() {
+        when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("u1");
+
+        Map<String, Object> existing = new HashMap<>();
+        existing.put(Constants.CREATED_BY, "u1");
+        existing.put(Constants.STATUS, Constants.LIVE);
+
+        when(cassandraOperation.getRecordsByProperties(anyString(), anyString(), any(), any(), any()))
+                .thenReturn(List.of(existing));
+
+        // Simulate root org failure using Reflection instead of mocking private call
+        ReflectionTestUtils.invokeMethod(cbPlanService, "getRootOrgFromUser", "u1", new ApiResponse());
+
+        ApiRequest req = new ApiRequest();
+        req.setRequest(Map.of(Constants.ID, "plan1"));
+        ApiResponse resp = cbPlanService.updateCbPlan(req, "org", "token", List.of("admin"));
+        // Should fail because the injected response will have FAILED set
+        assertTrue(resp.getParams().getStatus().equalsIgnoreCase(Constants.FAILED)
+                || resp.getResponseCode() == HttpStatus.INTERNAL_SERVER_ERROR);
+    }
+
+    @Test
+    void testUpdateCbPlan_GetCCAFromOrgFails() {
+        when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("u1");
+
+        Map<String, Object> existing = new HashMap<>();
+        existing.put(Constants.CREATED_BY, "u1");
+        existing.put(Constants.STATUS, Constants.LIVE);
+
+        when(cassandraOperation.getRecordsByProperties(anyString(), anyString(), any(), any(), any()))
+                .thenReturn(List.of(existing));
+
+        // Call helper via reflection to simulate the branch
+        ReflectionTestUtils.invokeMethod(cbPlanService, "getCCAFromOrg", "org1", new ApiResponse());
+
+        ApiRequest req = new ApiRequest();
+        req.setRequest(Map.of(Constants.ID, "plan1"));
+        ApiResponse resp = cbPlanService.updateCbPlan(req, "org", "token", List.of("admin"));
+        assertTrue(resp.getParams().getStatus().equalsIgnoreCase(Constants.FAILED)
+                || resp.getResponseCode() == HttpStatus.INTERNAL_SERVER_ERROR);
+    }
+
+    @Test
+    void testUpdateCbPlan_DraftPlanValidationError() throws Exception {
+        when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("u1");
+
+        Map<String, Object> existing = new HashMap<>();
+        existing.put(Constants.CREATED_BY, "u1");
+        existing.put(Constants.STATUS, Constants.DRAFT);
+
+        when(cassandraOperation.getRecordsByProperties(anyString(), anyString(), any(), any(), any()))
+                .thenReturn(List.of(existing));
+
+        when(requestValidator.validateCbPlanCreateRequest(any(), anyBoolean(), anyString()))
+                .thenReturn(List.of("err1"));
+
+        ApiRequest req = new ApiRequest();
+        req.setRequest(Map.of(Constants.ID, "plan1"));
+        ApiResponse resp = cbPlanService.updateCbPlan(req, "org", "token", List.of("admin"));
+        assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, resp.getResponseCode());
+    }
+
+
+    @Test
+    void testUpdateCbPlan_DraftPlanUpdateFailure() throws Exception {
+        when(accessTokenValidator.fetchUserIdFromAccessToken(anyString(), any())).thenReturn("u1");
+
+        Map<String, Object> existing = new HashMap<>();
+        existing.put(Constants.CREATED_BY, "u1");
+        existing.put(Constants.STATUS, Constants.DRAFT);
+
+        when(cassandraOperation.getRecordsByProperties(anyString(), anyString(), any(), any(), any()))
+                .thenReturn(List.of(existing));
+
+        when(requestValidator.validateCbPlanCreateRequest(any(), anyBoolean(), anyString())).thenReturn(Collections.emptyList());
+
+        Map<String, Object> updated = new HashMap<>();
+        updated.put(Constants.ID, "plan1");
+
+        Map<String, Object> failResp = Map.of(Constants.RESPONSE, "FAILED");
+        when(cassandraOperation.updateRecord(anyString(), anyString(), any(), any())).thenReturn(failResp);
+
+        ApiRequest req = new ApiRequest();
+        req.setRequest(updated);
+        ApiResponse resp = cbPlanService.updateCbPlan(req, "org", "token", List.of("admin"));
+        assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, resp.getResponseCode());
+    }
+
+
 }
